v2.14.1 - xx xxx xxxx
---------------------
   - IPsec:
     * Fixed support of strongswan 5.7+ in ovs-ipsec-monitor.
   - OVSDB:
     * New unixctl command 'ovsdb-server/memory-trim-on-compaction on|off'.
       If turned on, ovsdb-server will try to reclaim all the unused memory
       after every DB compaction back to OS.  Disabled by default.
     * Maximum backlog on RAFT connections limited to 500 messages or 4GB.
       Once threshold reached, connection is dropped (and re-established).
       Use the 'cluster/set-backlog-threshold' command to change limits.
     * Fixed SHA-1 hash computation for databases larger than 512 MB.
   - DPDK:
     * Fixed support of 'net_virtio' devices.

v2.14.0 - 17 Aug 2020
---------------------
   - ovs-vswitchd no longer deletes datapath flows on exit by default.
   - OpenFlow:
     * The OpenFlow ofp_desc/serial_num may now be configured by setting the
       value of other-config:dp-sn in the Bridge table.
     * Added support to watch CONTROLLER port status in fast failover group.
     * New action "delete_field".
   - DPDK:
     * Deprecated DPDK pdump packet capture support removed.
     * Deprecated DPDK ring ports (dpdkr) are no longer supported.
     * Add hardware offload support for VLAN Push/Pop actions (experimental).
     * Add hardware offload support for matching IPv6 protocol (experimental).
     * Add hardware offload support for set of IPv6 src/dst/ttl
       and tunnel push-output actions (experimental).
     * OVS validated with DPDK 19.11.2, due to the inclusion of fixes for
       CVE-2020-10722, CVE-2020-10723, CVE-2020-10724, CVE-2020-10725 and
       CVE-2020-10726, this DPDK version is strongly recommended to be used.
     * New 'ovs-appctl dpdk/log-list' and 'ovs-appctl dpdk/log-set' commands
       to list and change log levels in DPDK components.
     * Vhost-user Dequeue zero-copy support is deprecated and will be removed
       in the next release.
   - Linux datapath: