@@ -1,7 +1,9 @@
 v2.14.1 - xx xxx xxxx
 ---------------------
    - IPsec:
-     * Fixed support of strongswan 5.7+ in ovs-ipsec-monitor.
+     * Fixed support of strongswan 5.7+ in ovs-monitor-ipsec.
+     * Add option '--no-cleanup' to allow ovs-monitor-ipsec to stop without
+       tearing down IPsec tunnels.
    - OVSDB:
      * New unixctl command 'ovsdb-server/memory-trim-on-compaction on|off'.
        If turned on, ovsdb-server will try to reclaim all the unused memory
